err/phylotoast.err
Listing '.'...
Listing './bin'...
Compiling './bin/LDA.py'...
***   File "./bin/LDA.py", line 25
    print 'Import Error. Please install missing module:', item
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/PCoA.py'...
***   File "./bin/PCoA.py", line 17
    print 'Import Error. Please install missing module:', item
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/PCoA_bubble.py'...
***   File "./bin/PCoA_bubble.py", line 248
    print 'Plotting chart for {}'.format(otus[otuID])
                                ^
SyntaxError: invalid syntax

Compiling './bin/assign_taxonomy_by_blast_result.py'...
***   File "./bin/assign_taxonomy_by_blast_result.py", line 66
    print 'Taxonomy written to: {}'.format(args.assigned_taxonomy_fp)
                                  ^
SyntaxError: invalid syntax

Compiling './bin/barcode_filter.py'...
***   File "./bin/barcode_filter.py", line 44
    print count
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/biom_phyla_summary.py'...
***   File "./bin/biom_phyla_summary.py", line 50
    print 'Total sequence count: %i\n' % tot_seqs
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/condense_workflow.py'...
***   File "./bin/condense_workflow.py", line 50
    print "Condensing OTUs:\n"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/diversity.py'...
***   File "./bin/diversity.py", line 38
    print 'Import Error. Please install missing module:', item
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/filter_keep_otus_by_sample.py'...
***   File "./bin/filter_keep_otus_by_sample.py", line 65
    print otu, 'removed'
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/filter_rep_set.py'...
***   File "./bin/filter_rep_set.py", line 90
    print '%i sequences associated with unique OTUs' % len(records)
                                                   ^
SyntaxError: invalid syntax

Compiling './bin/merge_otu_results.py'...
***   File "./bin/merge_otu_results.py", line 60
    print '{} files merged'.format(len(args.pick_otus_results))
                          ^
SyntaxError: invalid syntax

Compiling './bin/multi_parallel_pick_otus.py'...
***   File "./bin/multi_parallel_pick_otus.py", line 101
    print outFN
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/multi_qsub.py'...
***   File "./bin/multi_qsub.py", line 34
    print 'qsub {}'.format(script)
                  ^
SyntaxError: invalid syntax

Compiling './bin/otu_condense.py'...
***   File "./bin/otu_condense.py", line 48
    print "ERROR: incorrect number of fields found on line {} of the input file. Entry skipped.".format(i)
                                                                                               ^
SyntaxError: invalid syntax

Compiling './bin/otu_to_tax_name.py'...
***   File "./bin/otu_to_tax_name.py", line 57
    print 'Error: OTU ID {} not found in supplied taxonomy file; stopping...'.format(ID)
                                                                            ^
SyntaxError: invalid syntax

Compiling './bin/pick_otus_condense.py'...
***   File "./bin/pick_otus_condense.py", line 89
    print 'Output written to {}'.format(args.condensed_seqs_otus_file)
                               ^
SyntaxError: invalid syntax

Compiling './bin/primer_average.py'...
***   File "./bin/primer_average.py", line 97
    print 'Shared OTU:', otuid
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/prune_otus.py'...
***   File "./bin/prune_otus.py", line 229
    print 'Input: \t{} total samples'.format(nsamples)
                                    ^
SyntaxError: invalid syntax

Compiling './bin/sanger_qiimify.py'...
***   File "./bin/sanger_qiimify.py", line 46
    print parser.format_usage().strip()
               ^
SyntaxError: invalid syntax

Compiling './bin/split_sequence_data.py'...
***   File "./bin/split_sequence_data.py", line 68
    print msg.format(len(buckets), len(buckets[0]))
            ^
SyntaxError: invalid syntax

Listing './data'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/phylotoast'...
Compiling './lib/python3.5/site-packages/phylotoast/graph_util.py'...
***   File "./lib/python3.5/site-packages/phylotoast/graph_util.py", line 18
    print 'Import Error. Please install missing module:', item
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/phylotoast/test'...
Listing './lib/python3.5/site-packages/phylotoast-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
